force-app/main/default/objects/Error_Logs__c/Error_Logs__c.object-meta.xml
<CustomObject>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Error Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>