force-app/main/default/objects/Error_Logs__c/fields/Error_Log_ID__c.field-meta.xml
<CustomField>
    <fullName>Error_Log_ID__c</fullName>
    <displayFormat>ELID-{0000}</displayFormat>
    <label>Error Log ID</label>
    <type>AutoNumber</type>
</CustomField>