force-app/main/default/objects/Error_Logs__c/fields/Transformed_Payload__c.field-meta.xml
<CustomField>
    <fullName>Transformed_Payload__c</fullName>
    <label>Transformed Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>