force-app/main/default/objects/Error_Logs__c/recordTypes/Finance.recordType-meta.xml
<RecordType>
    <fullName>Finance</fullName>
    <active>true</active>
    <label>Finance</label>
</RecordType>